# mobile-agent

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  README_GITHUB.md  config.py  env.example  mcp_server.py  mobile-mcp-architecture.drawio  project_structure.markmap  publish.sh  setup.py
agent-app/: .env.example  README.md  pyproject.toml
agent-app/src/mobile_agent/: __init__.py
agent-app/src/mobile_agent/api/: __init__.py  app.py  chat.py  conversations.py  devices.py  schemas.py  settings.py  test.py
agent-app/src/mobile_agent/cli/: __init__.py  interactive.py
agent-app/src/mobile_agent/core/: __init__.py  agent_builder.py  config.py  mcp_connection.py  service.py  storage.py
agent-app/src/mobile_agent/middleware/: __init__.py  operation_logger.py  retry.py  screenshot_optimizer.py  test_executor.py
agent-app/src/mobile_agent/models/: __init__.py  test_case.py  tool_config.py
agent-app/src/mobile_agent/prompts/: system_prompt.py  test_prompt.py
agent-app/src/mobile_agent/streaming/: __init__.py  orchestrator.py  response_handler.py
agent-app/tests/: test_api.py  test_app_flow.py  test_e2e.py  test_orchestrator.py
core/: basic_tools.py  basic_tools_lite.py  ios_client_wda.py  mobile_client.py  smart_app_launcher.py  template_matcher.py
docs/: MCP_README.md  MCP_README_EN.md  architecture.md  device-management.md  electron-mcp-packaging.md  feature-overview.md  iOS_SETUP_GUIDE.md  sse-interaction-topology.md  test-executor-plan.md  upstream-issue-draft.md
frontend/: .gitignore  forge.config.ts  index.html  package-lock.json  package.json  (+2 more)
(+57 files in other folders)
